# linux_creation_tool

./: Cargo.toml  LICENSE-MIT  LICENSE_APACHE  Makefile  README.md  build.sh  config.json  demo.json  example.json  linux_creation_tool.desktop  sev.linux_creation_tool.desktop
src/: download.rs  lib.rs  linux.rs  main.rs  read.rs
src/ui/: mod.rs  snapping_scrollbar.rs
