[package]
name = "linux_creation_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
iced = {version = "0.4.2", features = ["image", "tokio"]}
iced_style = "0.4.0"
iced_native = "0.5.1"
image = "0.24.4"
reqwest = {version = "0.11", features = ["stream"]}
tokio = {version = "1.21.2", features = ["full"]}
libc = "0.2.136"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.87"
indicatif = "0.17.1"
dbus = "0.9.6"
dbus-udisks2 = {git = "https://github.com/pop-os/dbus-udisks2"}