[package]
name = "linux_creation_tool"
version = "0.1.0"
edition = "2021"
readme = "README.md"
include = ["pictures/*", "preview.png", "*.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
iced = {version = "0.8.0", features = ["image", "tokio"]}
iced_native = "0.9.0"
image = "0.24.4"
reqwest = {version = "0.11", features = ["blocking"]}
tokio = "1.21.2"
libc = "0.2.136"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.87"
dbus = "0.9.6"
dbus-udisks2 = {git = "https://github.com/pop-os/dbus-udisks2"}
windows = "0.43.0"